Fix overflow issues
Month containers have a fixed pixel height set in the
year-calendar.css file, which causes the individual months
to appear smushed together in some years. The quick fix
is to just increase the fixed height from 200px to 230px.

Set overflow to visible for the calendar, so there should
never be a scroll bar within the page.

Reduce box shadow size for dates with several events
per day from 8px to 6px.

--- a/resources/css/calendar.css
+++ b/resources/css/calendar.css
@@ -38,12 +38,21 @@
     padding: 0;
 }
 
+#calendar {
+    overflow: visible;
+}
+
+#calendar .months-container .month-container {
+    /* this is set to 200px in js-year-calendar.min.css */
+    height: 230px;
+}
+
 #calendar td.day.one-event {
     box-shadow: hsl(219, 57%, 40%) 0px -4px 0px 0px inset;
 }
 
 #calendar td.day.several-events {
-    box-shadow: hsl(219, 57%, 40%) 0px -8px 0px 0px inset;
+    box-shadow: hsl(219, 57%, 40%) 0px -6px 0px 0px inset;
 }
 
 #calendar .popover-body div.event-tooltip-content {
